[package]
name = "ckks"
version = "0.1.0"
authors = ["Nick Angelou <nick@morfix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ckks"
path = "src/lib.rs"
crate-type = ["lib"]
# Disable `cargo bench` from looking into lib
bench = false

[dependencies]
# nalgebra - used for linear algebra (matrix computation)
nalgebra = "0.29"
# num-complex - used for complex numbers
num-complex = "0.4"
# ark-poly - used to convert vectors into polynomials and evaluate them
rustnomial = "0.3"
# rand - used to sample random values
rand = "0.8"

[dev-dependencies]
# criterion - used for benchmarking
criterion = "0.3.5"

[[bench]]
name = "ckks_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true