[package]
name = "ckks"
version = "0.1.0"
authors = ["Nick Angelou <angelou.nick@gmail.com>"]
edition = "2024"

[lib]
name = "ckks"
bench = false

[dependencies]
nalgebra = "0.33"
num-complex = "0.4"
rustnomial = "0.3"
rand = "0.9"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "ckks_benchmark"
harness = false
